attempting to fix about page on mobile

--- a/web/ui/static/css/about.css
+++ b/web/ui/static/css/about.css
@@ -5,8 +5,7 @@
     justify-content: center;
     align-items: center;
     margin: auto;
-    height: 100%;
-    width: 40%;
+    width: 50%;
     font-family: "Trebuchet MS", sans-serif;
     font-size: 16px;
 }
